--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -21,39 +21,39 @@
     </div>
     <div class="middle-container">
         <div class="profile">
-            <img class="cat" src="https://render.fineartamerica.com/images/rendered/medium/print/images/artworkimages/medium/1/kandinsky-cat-yury-malkov.jpg" alt="kandinsky-cat-yury-malkov">
+            <img class="profile-img" src="images/pinkgirl.jpg" alt="pinkgirl-img">
             <h2>Hello.</h2>
-            <p>I am a web developer, I ❤️ cats and solving rubik's cube.</p>
+            <p class="intro">I am a web developer, I ❤️ cats and solving rubik's cube.</p>
         </div>
         <hr>
         <div class="skills">
             <h2>My Skills.</h2>
             <div class="skill-row">
-                <img class="" src="https://media2.giphy.com/media/l0HU7JI4zIb34QM5a/200w.webp?cid=790b76115d1a18384666487045694e7d&rid=200w.webp" alt="java-img">
-                <h3>Lorem & Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+                <img class="java-img" src="https://media2.giphy.com/media/l0HU7JI4zIb34QM5a/200w.webp?cid=790b76115d1a18384666487045694e7d&rid=200w.webp" alt="java-img">
+                <h3>Web/Software development</h3>
+                <p>I am Studing computer science and I build projects in my free time. My favorite programming language is Java. </p>
             </div>
             <div class="skill-row">
-                <img class="" src="" alt="">
-                <h3>Lorem Ipsum Dolor</h3>
-                <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+                <img class="cube-img" src="https://thumbs.gfycat.com/ChillyThoughtfulAnemonecrab.webp" alt="Rubik's Cube">
+                <h3>Rubik's Cube</h3>
+                <p>I love solving Rubik's cubes. I am trying to imporve my current record and solving it in 30 seconds.</p>
             </div>
         </div>
         <hr>
         <div class="contact-me">
             <h2>Get In Touch</h2>
-            <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-            <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-            <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+            <h3>If you love coding and pizza as much as I do.</h3>
+            <p class="contact-text">Love pizza as much as I do? Let's talk about how awesome pizza is! We can code while we eat pizza!</p>
+            <a class="btn" href="mailto:annalisa@annalisa.me">Contact me</a>
         </div>
     </div>
 
 
     <div class="bottom-container">
-        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-        <a class="footer-link" href="https://twitter.com/">Twitter</a>
-        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-        <p>© 2018 Name Surname.</p>
+        <a class="footer-link" href="https://www.linkedin.com/in/annalisafm/">LinkedIn</a>
+        <a class="footer-link" href="https://twitter.com/annalisamagri">Twitter</a>
+        <a class="footer-link" href="https://www.annalisa.me">Website</a>
+        <p class="copyright">© 2019 Annalisa FM.</p>
     </div>
 </body>
 
